--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+# Liquibase properties
+
+spring.liquibase.change-log=classpath:liquibase-outputChangeLog.xml
+
 # Swagger properties
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
