--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 		<liquibase.version>3.6.3</liquibase.version>
+		<liquibase.propertyFile>src/main/resources/liquibase/liquibase.properties</liquibase.propertyFile>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -111,11 +112,8 @@
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>${liquibase.version}</version>
 				<configuration>
-					<driver>org.h2.Driver</driver>
-					<url>jdbc:h2:file:./temp/hrs/customerdb</url>
-					<username>sa</username>
-					<password />
-					<outputChangeLogFile>src/main/resources/liquibase-outputChangeLog.xml</outputChangeLogFile>
+					<propertyFileWillOverride>true</propertyFileWillOverride>
+                    <propertyFile>${liquibase.propertyFile}</propertyFile>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -123,6 +121,16 @@
 						<artifactId>liquibase-hibernate5</artifactId>
 						<version>3.6</version>
 					</dependency>
+					<dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-data-jpa</artifactId>
+                        <version>${project.parent.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-web</artifactId>
+                        <version>${project.parent.version}</version>
+                    </dependency>
 				</dependencies>
 			</plugin>
 		</plugins>
