--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,14 @@ spring.h2.console.settings.trace=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Liquibase properties
 
-spring.liquibase.change-log=classpath:liquibase-outputChangeLog.xml
+spring.liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
 
 # Swagger properties
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
