--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Liquibase properties
-
+spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
 
 # Swagger properties
