--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,10 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
+
+# Common Kafka Properties
+auto.create.topics.enable=true
+
+# Kafka Producer properties
+producer.config.bootstrap-servers=localhost:9092
+producer.config.topic.name=customer-registration
